# py-image-metadata-parser

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  Pipfile  README.md  environment.yml  mypy.ini  pull_request_template.md  pylintrc  pyproject.toml  setup.py
.github/workflows/: checks.yml  feature_branch.yaml  lint_and_test.yaml  main.yml
data/: session.txt
doc/: Makefile  api.rst  conf.py  index.rst  make.bat
doc/_modules/: imgparse.rst
docs/: conf.py  index.rst
docs/_modules/: modules.rst
imgparse/: __init__.py  _version.py  altitude.py  cli.py  create_analytics_metadata.py  decorators.py  exceptions.py  getters.py  imgparse.py  metadata.py  parse.py  parser.py  parsers.py  pixel_pitches.py  rotations.py  s3.py  types.py  util.py  utils.py  xmp.py  xmp_tags.py
imgparse/parsing/: altitude.py  parser.py  radiometry.py
scripts/: create_analytics_metadata.py  get_camera_params.py  get_gsd.py  get_relative_altitude.py
tests/: test_imgparse.py
tests/data/: DJI_ms.tif  MicaSense_ms.tif  Parrot_ms.TIF
