[tool.poetry]
name = "imgparse"
version = "2.0.0"
description = "Python image-metadata-parser utilities"
authors = []

[tool.poetry.dependencies]
python = "^3.9"
exifread = "*"
click = "*"
xmltodict = "*"
requests = "*"
s3path = "*"
pytz = "*"
timezonefinder = {version = "^5.2.0", optional = true}
boto3 = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pre_commit = "*"
requests-mock = "*"
mypy = "*"
types-requests = "*"
types-pytz = "*"

[tool.poetry.scripts]
imgparse = "imgparse.cli:cli"

[tool.poetry.extras]
timestamps = ["timezonefinder"]
s3 = ["boto3"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
