[tool.poetry]
name = "imgparse"
version = "2.0.0"
description = "Python image-metadata-parser utilities"
authors = []

[tool.poetry.dependencies]
python = "^3.9"
exifread = "*"
click = "*"
xmltodict = "*"
requests = "*"
pytz = {version = "*", optional = true}
timezonefinder = {version = "*", optional = true}
boto3 = {version = "*", optional = true}
s3path = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pre_commit = "*"
requests-mock = "*"
mypy = "*"
types-requests = "*"
types-pytz = "*"
boto3-stubs = {version = "*", extras=["s3"]}

[tool.poetry.scripts]
imgparse = "imgparse.cli:cli"

[tool.poetry.extras]
timestamps = ["timezonefinder", "pytz"]
s3 = ["boto3", "s3path"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
