[tool.poetry]
name = "imgparse"
version = "2.0.3"
description = "Python image-metadata-parser utilities"
authors = []
include = [
    "imgparse/py.typed"
]

[tool.poetry.dependencies]
python = "^3.10"
exifread = "*"
click = "*"
xmltodict = "*"
requests = "*"
boto3 = {version = "*", optional = true}
s3path = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pre_commit = "*"
requests-mock = "*"
mypy = "*"
types-requests = "*"
boto3-stubs = {version = "*", extras=["s3"]}

[tool.poetry.scripts]
imgparse = "imgparse.cli:cli"

[tool.poetry.extras]
s3 = ["boto3", "s3path"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
